@@ -172,6 +172,8 @@ extern char *Log_MatchTrace(const char *text, int state);
 
 #define TRACE_OS_BASE		 (1ll<<51)
 
+#define TRACE_SCSIDRV		 (1ll<<52)
+    
 #define	TRACE_NONE		 (0)
 #define	TRACE_ALL		 (~0)
 
